test/libyul/yulSyntaxTests/invalid/dup_disallowed.yul
{
    dup0()
    dup1()
    dup2()
    dup3()
    dup4()
    dup5()
    dup6()
    dup7()
    dup8()
    dup9()
    dup10()
    dup11()
    dup12()
    dup13()
    dup14()
    dup15()
    dup16()
    dup32()
}
// ----
// DeclarationError 4619: (6-10): Function not found.
// TypeError 5017: (17-21): The identifier "dup1" is reserved and can not be used.
// TypeError 5017: (28-32): The identifier "dup2" is reserved and can not be used.
// TypeError 5017: (39-43): The identifier "dup3" is reserved and can not be used.
// TypeError 5017: (50-54): The identifier "dup4" is reserved and can not be used.
// TypeError 5017: (61-65): The identifier "dup5" is reserved and can not be used.
// TypeError 5017: (72-76): The identifier "dup6" is reserved and can not be used.
// TypeError 5017: (83-87): The identifier "dup7" is reserved and can not be used.
// TypeError 5017: (94-98): The identifier "dup8" is reserved and can not be used.
// TypeError 5017: (105-109): The identifier "dup9" is reserved and can not be used.
// TypeError 5017: (116-121): The identifier "dup10" is reserved and can not be used.
// TypeError 5017: (128-133): The identifier "dup11" is reserved and can not be used.
// TypeError 5017: (140-145): The identifier "dup12" is reserved and can not be used.
// TypeError 5017: (152-157): The identifier "dup13" is reserved and can not be used.
// TypeError 5017: (164-169): The identifier "dup14" is reserved and can not be used.
// TypeError 5017: (176-181): The identifier "dup15" is reserved and can not be used.
// TypeError 5017: (188-193): The identifier "dup16" is reserved and can not be used.
// DeclarationError 4619: (200-205): Function not found.
